--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 </head>
 
 <body>
-
-
-    <div class="block"></div>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, itaque!</h1>
+    <header>
+        <div class="container">
+            <div class="hero">
+                <div class="hero__left">
+                    <span class="hero__left__span">Chase the new Flavour</span>
+                    <h1 class="hero__left__title">The key to Fine dining</h1>
+                    <p class="hero__left__text">Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </p>
+                    <button class="hero__left__btn">Explore Menu</button>
+                </div>
+                <img class="hero__img" src="./images/hero-img.png" alt="Shashlik">
+                <img class="hero__img2" src="./images/hero-mobile-img.png" alt="Shashlik">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
