happy customers section completed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,38 @@
 <body>
 
 
-    <div class="block"></div>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, itaque!</h1>
+    <main>
+        <section class="Happy-customers">
+            <div class="container">
+                <div class="Happy-customers__title">
+                    <h5 class="Happy-customers__title__h5">Testimony</h5>
+                    <img class="Happy-customers__title__img" src="./images/icons/spoon.svg" alt="spoon">
+                    <h2 class="Happy-customers__title__h2">Happy customers</h2>
+                </div>
+                <div class="Happy-customers__cards">
+                    <div class="Happy-customers__cards__card">
+                        <h3 class="Happy-customers__cards__card__h3">Maria</h3>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
+                    </div>
+                    <div class="Happy-customers__cards__card">
+                        <h3 class="Happy-customers__cards__card__h3">Maria</h3>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
+                    </div>
+                    <div class="Happy-customers__cards__card">
+                        <h3 class="Happy-customers__cards__card__h3">Maria</h3>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
+                    </div>
+                </div>
+                <div class="Happy-customers__img">
+                    <img src="./images/icons/slider.svg" alt="slider">
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
