--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turkish</title>
-    <link rel="stylesheet" href="./sass/main.css">
-</head>
+    <link rel="stylesheet" href="./sass/main.css" />
+  </head>
 
-<body>
+  <body>
+    <main>
+      <section class="media-page">
+        <div class="container">
+            <input class="media__label-input" type="checkbox" name="media" id="media">
 
+          <div class="media">
+            <div class="media__logo">
+                <img class="media__logo-img" src="./images/media-logo.svg" alt="...">
+            </div>
+            <div class="media__photo">
+                <label for="media">
+                    <img class="media__photo-img" src="./images/media-btn.svg" alt="....">
+                </label>
+            </div>
+          </div>
 
-    <div class="block"></div>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, itaque!</h1>
-</body>
+          <iframe width="100%" height="763" src="https://www.youtube.com/embed/aJHERLcrPvw" title="A Day In The Life of an Amazon Software Engineer (Office Edition)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
