--- a/index.html
+++ b/index.html
@@ -15,6 +15,82 @@
 
 <body>
     
+    <!-- Dishes section -->
+
+    <section id="dishes" class="dishes">
+        <div class="container">
+            <div class="dishes__intro">
+                <h1 class="dishes__intro-title">
+                    popular dishes
+                </h1>
+                <div class="dishes__intro-buttons">
+                    <div class="dishes__button">
+                        <img src="./images/Vector (4).png" alt="button">
+                    </div>
+                    <div class="dishes__button">
+                        <img src="./images/Vector (5).png" alt="button">
+                    </div>
+                </div>
+            </div>
+            <ul class="dishes__cards">
+                <li class="dishes__card">
+                    <div class="dishes__card-image" >
+                        <img src="./images/image-1 (7).png" alt="image-1">
+                    </div>
+                    <h3 class="dishes__card-title">Barbecue Shish kebab Shashlik Skewer</h3>
+                    <div class="dishes__card-stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p class="dishes__card-cost">$12.00</p>
+                </li>
+                <li class="dishes__card">
+                    <div class="dishes__card-image" >
+                        <img src="./images/image-2 (4).png" alt="image-2">
+                    </div>
+                    <h3 class="dishes__card-title">Barbecue Shish kebab Shashlik Skewer</h3>
+                    <div class="dishes__card-stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p class="dishes__card-cost">$12.00</p>
+                </li>
+                <li class="dishes__card">
+                    <div class="dishes__card-image" >
+                        <img src="./images/image-3 (5).png" alt="image-3">
+                    </div>
+                    <h3 class="dishes__card-title">Barbecue Shish kebab Shashlik Skewer</h3>
+                    <div  class="dishes__card-stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p  class="dishes__card-cost">$12.00</p>
+                </li>
+                <li class="dishes__card">
+                    <div class="dishes__card-image" >
+                        <img src="./images/image-4 (3).png" alt="image-4">
+                    </div>
+                    <h3 class="dishes__card-title">Barbecue Shish kebab Shashlik Skewer</h3>
+                    <div class="dishes__card-stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p class="dishes__card-cost">$12.00</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Dishes section -->
+    
 </body>
 
 </html>
