text added css changed

--- a/index.html
+++ b/index.html
@@ -23,24 +23,33 @@
                 <div class="Happy-customers__cards">
                     <div class="Happy-customers__cards__card">
                         <h3 class="Happy-customers__cards__card__h3">Maria</h3>
-                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque
+                            scelerisq...</p>
                         <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
                     </div>
                     <div class="Happy-customers__cards__card">
                         <h3 class="Happy-customers__cards__card__h3">Maria</h3>
-                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque
+                            scelerisq...</p>
                         <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
                     </div>
                     <div class="Happy-customers__cards__card">
                         <h3 class="Happy-customers__cards__card__h3">Maria</h3>
-                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisq...</p>
+                        <p class="Happy-customers__cards__card__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque
+                            scelerisq...</p>
                         <img class="Happy-customers__cards__card__img" src="./images/icons/data.svg" alt="data">
                     </div>
                 </div>
                 <div class="Happy-customers__img">
                     <img src="./images/icons/slider.svg" alt="slider">
                 </div>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero inventore vel necessitatibus expedita
+                    vitae, alias tempore nesciunt pariatur est, exercitationem praesentium quos. Quam aspernatur dolor
+                    possimus nulla excepturi quaerat, explicabo veritatis sit beatae suscipit. Ad optio quod iste eius
+                    maxime asperiores alias sint, saepe adipisci! Tempora consequuntur ratione quibusdam voluptates!</p>
             </div>
         </section>
     </main>
